Apply changes from Commcare 2.11 branch  at https://bitbucket.org/commcare/javarosa The significant change is adding support for 'current()' in the same usage as 'instance(name)': - FormDef -- now supports XForms actions; triggerable set is more complete - FormInstance -- now derived from DataInstance; code movement and textual changes. - TreeElement -- replace booleans with bitmask values; preserves namespace. - TreeReference -- restructured to use TreeReferenceLevel. Support for current() - Localizer -- no longer examines substitution strings for substitutions. new data structure. - XFormParser -- slim down text after parsing by collapsing Unicode strings.      Use a XFormParserReporter to communicate errors (was System.out). Add parsing support     for actions and events. - XPathPathExpr -- add support for "current()" in the same usage as instance(name) to reference     the current (mutable) form. - added a lof of classes. I think most of these are not actively used.