@@ -38,20 +38,20 @@ public class IntegerData implements IAnswerData {
 	 * Shouldn't be used otherwise.
 	 */
 	public IntegerData() {
-		
+
 	}
-	
+
 	public IntegerData(int n) {
 		this.n = n;
 	}
 	public IntegerData(Integer n) {
 		setValue(n);
 	}
-	
+
 	public IAnswerData clone () {
 		return new IntegerData(n);
 	}
-	
+
 	/* (non-Javadoc)
 	 * @see org.javarosa.core.model.data.IAnswerData#getDisplayText()
 	 */
@@ -63,16 +63,16 @@ public class IntegerData implements IAnswerData {
 	 * @see org.javarosa.core.model.data.IAnswerData#getValue()
 	 */
 	public Object getValue() {
-		return new Integer(n); 
+		return Integer.valueOf(n);
 	}
-	
+
 	public void setValue(Object o) {
 		if(o == null) {
 			throw new NullPointerException("Attempt to set an IAnswerData class to null.");
 		}
 		n = ((Integer)o).intValue();
 	}
-	
+
 	/* (non-Javadoc)
 	 * @see org.javarosa.core.services.storage.utilities.Externalizable#readExternal(java.io.DataInputStream)
 	 */
@@ -88,9 +88,9 @@ public class IntegerData implements IAnswerData {
 	}
 
 	public UncastData uncast() {
-		return new UncastData(new Integer(n).toString());
+		return new UncastData(Integer.valueOf(n).toString());
 	}
-	
+
 	public IntegerData cast(UncastData data) throws IllegalArgumentException {
 		try {
 			return new IntegerData(Integer.parseInt(data.value));
